mule-user-guide/v/3.4/transformers.adoc
= 变压器

== 概述

Transformer通过增强或改变消息头或消息有效载荷来准备要通过Mule流进行处理的消息。例如，如果触发流的消息源以XML格式接收数据，但下游消息处理器需要JSON格式的数据，则位于消息源和消息处理器之间的一个或多个变换器可以实现必要的转换。 （由于不存在XML到JSON的转换器，这个特殊的例子需要一个链接到Object-to-JSON转换器的XML到Object的转换器。）

Mule Studio提供了一套标准转换器来处理最常见的数据转换场景。通常，这些预先封装的构建块需要最少的配置。但是，如果您的特定用例需要特殊设置，则可以打开已选择的特定转换器的“属性”窗格，然后使用下拉列表或文本输入字段修改默认配置。

=== 链接变形金刚

您可以对变压器进行排序，使第一个输出成为下一个输入。例如，如果您需要实施A-to-D转换，但不存在此类预先封装的变压器，则您可能能够找到实现A-to-B，B- to-C和C-to-D，可以有效和高效地模拟不可用的A / D转换器。

=== 自定义变形金刚

Studio提供了一个*Custom Transformer*，如果没有预先打包的变压器或变压器序列满足您的需求，您可以对其进行配置。此选项要求您编写一个Java类，以执行您所需的确切转换。然后设置Custom Transformer来引用此自定义类。

=== 数据映射

*Anypoint* *DataMapper*变压器为与Studio捆绑在一起的许多标准变压器提供了强大而多功能的替代方案。除了将数据从一种格式转换为另一种格式并操纵有效负载值之外，DataMapper还可以将输入字段（例如`last_name`）映射到不同的输出字段（例如`family_name`）。多个字段（例如`title`，`first_name`和`last_name`可以组合成一个复合字段（例如`full_name`）.DataMapper支持表达式，有助于条件值重新计算功能强大的数据库查询，它还可以检索会话状态信息以促进条件消息路由，详情请参阅 link:/anypoint-studio/v/6/datamapper-user-guide-and-reference[DataMapper用户指南和参考]。

== 常用变压器配置字段

尽管这些字段可能以不同方式分布在“特性”窗格的*General*，*Advanced*和*Documentation*选项卡中，但大多数变换器都共享一组通用配置字段。下表介绍了这些常用字段中的每一个：

[%header,cols="2*"]
|===
| {字段{1}}说明
|显示名称 |默认为通用转换器名称。更改显示名称（必须是字母数字）以反映变换者的特定角色，即"Appends time stamp ID"
|返回类 |指定生成变换器输出的Java类。自动选择变压器或检查变压器是否已返回适当类型的输出时，会引用该值。 +
  *Note*：要指定数组类型，请使用方括号'[]'后缀类名，如'org.mule.tck.testmodels.fruit.Orange []'中所示。
|忽略坏输入 |选中此框可指定变压器是否应将未能处理的消息传递到变压器链中的下一个变压器。如果未选中该框，则变压器将保留到该点为止产生的结果，而不会将任何信息传递给链中的下一个变压器。
|编码 |从下拉列表中指定用于输出的字符串编码类型（例如`UTF-8`或`US ASCII`等）。
| Mime  |从下拉列表中指定用于输出的MIME类型，例如`text/plain`或`application/json`。
|描述 |输入此变换器的详细说明，以便在您将鼠标悬停在端点图标上时弹出的黄色帮助气球中显示。
|===

Studio中提供== 个变形金刚

Studio Palette中提供的变形金刚分为四大类，详见下表：

=== 脚本变形金刚

这种变压器集成了一个脚本来执行转换。为四种支持的脚本语言中的每一种都提供了一个转换器，第五种通用转换器可以实现用四种语言中的任何一种编写的脚本。

[%header,cols="4*"]
|===
|   |脚本+
变压器 | {描述{1}}的文档
| image:groovy-transformer-24x16.png[常规变压器-24x16]  | Groovy  |实现由Groovy脚本引擎支持的Groovy脚本转换器 |此转换器的所有配置字段在{ {1}}部分。


| image:javascript-transformer-24x16.png[JavaScript的变压器24x16]  | JavaScript  |实现由JavaScript脚本引擎 | link:/mule-user-guide/v/3.4/script-transformer-reference[脚本变换器参考]支持的JavaScript转换器

| image:python-transformer-24x16.png[蟒蛇变压器-24x16]  | Python  |实现一个由Python脚本引擎 | link:/mule-user-guide/v/3.4/script-transformer-reference[脚本变换器参考]支持的JavaScript转换器

| image:ruby-transformer-24x16.png[红宝石变压器24x16]  | Ruby  |实现由Ruby脚本引擎 | link:/mule-user-guide/v/3.4/script-transformer-reference[脚本变换器参考]支持的脚本转换器

| image:Transformer-24x16.png[变压器24x16]  |脚本 |实现由符合JSR-223标准的脚本引擎支持的脚本转换器，如Groovy，JavaScript，Python或Ruby {{ } link:/mule-user-guide/v/3.4/script-transformer-reference[脚本变换器参考]

|===

===  Java对象变形金刚

该组中的每个变换器都将Java对象更改为另一个Java对象，将Java对象更改为某种其他数据类型（例如HTTP请求），或将某些非Java数据类型（例如HTTP响应）更改为Java对象。

[%header,cols="4*"]
|===
|   | Java对象转换器 |描述 |文档
| image:Transformer-24x16.png[变压器24x16]  | Byte-Array-to-Object  |通过反序列化数组或将其转换为字符串，将字节数组转换为对象{5}}此转换器的所有配置字段均包含在此页面的<<Common Transformer Configuration Fields>>部分中。


| image:Transformer-24x16.png[变压器24x16]  |字节数组到可序列化 |对字节数组进行反序列化，从而将其转换为对象 |所有这些配置字段此页面的<<Common Transformer Configuration Fields>>部分介绍了变压器。


| image:Transformer-24x16.png[变压器24x16]  |字节数组到字符串 |将字节数组转换为字符串 |此变换器的所有配置字段均包含在此页面的<<Common Transformer Configuration Fields>>部分。

| image:Transformer-24x16.png[变压器24x16]  |文件到字节数组 |将java.io.File的内容读入Byte数组 |所有配置此页面的<<Common Transformer Configuration Fields>>部分介绍了此变换器的字段。


| image:Transformer-24x16.png[变压器24x16]  |文件到字符串 |将java.io.File的内容读入Byte数组 |所有配置字段此转换器在本页的<<Common Transformer Configuration Fields>>部分中进行了介绍。

| image:Transformer-24x16.png[变压器24x16]  | HTTP-Response-to-Object  |将HTTP响应（即字符串，流或字节数组有效载荷）转换为Mule消息{ 5}}此转换器的所有配置字段都包含在此页面的<<Common Transformer Configuration Fields>>部分中。

| image:Transformer-24x16.png[变压器24x16]  | Java  |将数据从一种格式转换为另一种格式 |  link:/mule-user-guide/v/3.4/java-transformer-reference[Java变压器参考]


| image:Transformer-24x16.png[变压器24x16]  | JmsMessage-to-Object *Enterprise Edition*  |通过提取消息有效载荷 |将JMS消息转换为对象。此页面的<<Common Transformer Configuration Fields>>部分介绍了此转换器的配置字段。

| image:Transformer-24x16.png[变压器24x16]  | Json-to-Object  |将Json编码的对象图转换为Java对象 |此变换器的所有配置字段均为涵盖在此页面的<<Common Transformer Configuration Fields>>部分。


| image:Transformer-24x16.png[变压器24x16]  |对象到字节数组 |序列化除字符串以外的所有对象，这些对象使用`getBytes()`方法 |进行转换此页面的<<Common Transformer Configuration Fields>>部分介绍了此变换器的所有配置字段。

| image:Transformer-24x16.png[变压器24x16]  |对象到HTTP请求 |从当前消息创建一个有效的HTTP请求，并包括在当前消息{{5} }此转换器的所有配置字段都包含在此页面的<<Common Transformer Configuration Fields>>部分中。


| image:Transformer-24x16.png[变压器24x16]  |对象到JmsMessage *Enterprise Edition*  |将Java对象转换为五种类型的JMS消息之一，具体取决于对象{{6 }}此转换器的所有配置字段都包含在此页面的<<Common Transformer Configuration Fields>>部分中。

| image:Transformer-24x16.png[变压器24x16]  | Object-to-Json  |将Java对象转换为可由其他语言使用的JSON编码对象 |所有配置字段此转换器在本页的<<Common Transformer Configuration Fields>>部分中进行了介绍。


| image:Transformer-24x16.png[变压器24x16]  |对象到字符串 |将程序代码类型转换为可读的文本字符串用于调试。 |此变换器的所有配置字段已包含在此页面的<<Common Transformer Configuration Fields>>部分中。


| image:Transformer-24x16.png[变压器24x16]  | Object-to-XML  |使用XStream将Java对象转换为XML代码 | link:/mule-user-guide/v/3.4/object-to-xml-transformer-reference[对象到XML转换器参考]

| image:Transformer-24x16.png[变压器24x16]  | Serializable-to-Byte-Array  |通过序列化对象 |将Java对象转换为字节数组。此转换器在本页的<<Common Transformer Configuration Fields>>部分中进行了介绍。

| image:Transformer-24x16.png[变压器24x16]  |字符串到字节数组 |将字符串转换为字节数组 |此变换器的所有配置字段均包含在此页面的<<Common Transformer Configuration Fields>>部分。


| image:Transformer-24x16.png[变压器24x16]  | XML到对象 |使用XStream将XML转换为Java Bean图 | link:/mule-user-guide/v/3.4/xml-to-object-transformer-reference[XML到对象变换器参考]

|===

=== 内容变形金刚

这组变换器通过添加，删除或转换消息有效载荷（或消息标题）来修改消息。

[%header,cols="4*"]
|===
|   |内容+
变压器 | {描述{1}}的文档
| image:Transformer-24x16.png[变压器24x16]  |附加字符串 |将字符串附加到消息负载 | link:/mule-user-guide/v/3.4/append-string-transformer-reference[附加字符串转换器参考]


| image:Transformer-24x16.png[变压器24x16]  |机构到参数映射 |将HTTP请求的主体转换为Map对象 |所有这些配置字段此页面的<<Common Transformer Configuration Fields>>部分介绍了变压器。

| image:Transformer-24x16.png[变压器24x16]  |表达式 |评估消息中的一个或多个表达式，然后根据评估结果转换消息 |  {{1} }


| image:Transformer-24x16.png[变压器24x16]  | HTTP响应字符串 |将HTTP响应转换为字符串并保留邮件标题 |所有配置字段此转换器在本页的<<Common Transformer Configuration Fields>>部分中进行了介绍。

| image:Transformer-24x16.png[变压器24x16]  |消息到HTTP响应 |使用当前消息及其HTTP头创建有效的HTTP响应 |所有配置字段此页面的<<Common Transformer Configuration Fields>>部分介绍了该转换器。


| image:Transformer-24x16.png[变压器24x16]  | Transformer Ref  |引用被定义为全局元素 | link:/mule-user-guide/v/3.4/transformer-reference[变压器参考]的变换器

| image:Transformer-24x16.png[变压器24x16]  | XSLT  |使用XSLT转换XML  | link:/mule-user-guide/v/3.4/xslt-transformer-reference[XSLT变压器参考]

|===

===  SAP变形金刚

这些变换器将SAP对象（JCo函数或IDoc文档）更改为其XML表示形式，或将XML表示形式更改为相应的SAP对象。

[%header,cols="4*"]
|===============
|   |特定于SAP的+
  {变压器{1}}说明 |文档
| image:Transformer-24x16.png[变压器24x16]  | SAP-Object-to-XML *Enterprise Edition*  |将表示JCo函数或IDoc文档的SAP对象转换为其XML表示形式{{6 }} link:/mule-user-guide/v/3.4/sap-endpoint-reference[SAP端点参考]


| image:Transformer-24x16.png[变压器24x16]  | XML-to-Function（BAPI）*Enterprise Edition*  |从java.io.InputStream，java.lang中读取表示JCo函数的XML .String或byte []构建SAP传输 | link:/mule-user-guide/v/3.4/sap-endpoint-reference[SAP端点参考]所期望的SAP对象

| image:Transformer-24x16.png[变压器24x16]  | XML-to-IDoc *Enterprise Edition*  |从java.io.InputStream，java.lang.String中读取表示JCo函数的XML byte []来构建SAP传输 | link:/mule-user-guide/v/3.4/sap-endpoint-reference[SAP端点参考]所期望的SAP对象

|===============

=== 消息和可变变换器

这组中的四个变压器在每个消息通过一个Mule应用程序时会在特定时间段内提供特殊信息。在每种情况下，这些转换器不会直接修改消息;相反，每个人都会激活Mule用来扩充或修改信息的信息。其中一些激活的资源遵守消息;其他人则适用于消息传递的流程。无论如何，它们提供了强化手段来增强和改进Mule消息处理输出。

[TIP]
这四个*Message and Variable Transformers*共同替代了已弃用的单个*Message Properties Transformer*。

请注意消息和可变变换器的共同特征：

* 与大多数其他变形金刚不同，这四个变形金刚不能嵌入端点
* 否*Global Element*（即配置模板）对于任何这些转换器都存在，因此您必须分别配置每个实例
* 这些转换器都不能被其他Mule构建块引用，因此，实际上，您不能在同一个流中多次使用单个实例

下表介绍了各个*Message and Variable*转换器：

[%header,cols="4*"]
|===
|   |变形器 |功能 |文档
| image:Transformer-24x16.png[变压器24x16]  |附件 |与*Message Enricher Scope*或*Append String Transformer*不同，*Attachment Transformer*不会添加到字符串通常组成主要数据有效载荷。相反，这个转换器指定一个附件来附加到通过流处理的每个消息。如果通过表达式定义附件的名称或值，则可以在运行时计算附件的确切身份（和内容），并且可能会收到不同的有效负载。通常，此附件被视为出站有效负载的单独次要部分。 | link:/mule-user-guide/v/3.4/attachment-transformer-reference[附件变压器参考]


| image:Transformer-24x16.png[变压器24x16]  |属性 |该转换器允许您指定通常应用于邮件标题的属性。此类属性的"life span"从创建时开始直到将消息传递给出站端点。 | link:/mule-user-guide/v/3.4/property-transformer-reference[属性变换器参考]

| image:Transformer-24x16.png[变压器24x16]  |变量 |根据当前消息的内容或骡子的当前状态，该变换器有助于确定指定变量值的动态运行时间环境。然后Mule可以使用该值来改变最终分配给当前消息的有效内容或处理步骤。只要消息保留在变量被调用的流程内，这种类型的变量就保持活动状态。只要通过传输将消息传递给其他流，该变量就会变为非活动状态。 | link:/mule-user-guide/v/3.4/variable-transformer-reference[可变变压器参考]

| image:Transformer-24x16.png[变压器24x16]  |会话变量 |该变换器类似于变量变换器，只要相关消息保留在Mule应用程序中，即使该消息可能通过多个流处理。 | link:/mule-user-guide/v/3.4/session-variable-transformer-reference[会话变量变换器参考]
|===

=== 自定义变形金刚

有关使用XML编辑器配置标准和自定义变形金刚的详细信息，请参阅 link:/mule-user-guide/v/3.4/using-transformers[使用变形金刚]。
